client_web/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 60px;
  float: left; 
}

.App-header {
  background-color: ghostwhite;
  height: 60px;
  padding: 20px;
  color: rgba(169, 169, 169, 1);
}

.App-header.img {
  float: left; 
}

.App-title {
  font-size: 28px;
  font-family: 'Roboto Mono', monospace;
  letter-spacing: 1.2px; 
}

.App-header h2 {
  font-size: 28px;
  font-family: 'Roboto Mono', monospace;
}

.App-intro {
  font-size: large;
}

.games {
  display: inline-block;
}

.game {
  transition: box-shadow .6s;
  transition: top .6s; 
  transition: left .6s;  
  display: inline-block; 
  background-color:  #78B9CC;
  margin: 10px; 
  width: 250px; 
  box-shadow: 2px 2px 4px rgba(143, 142, 142, 0.397);
  position: relative;   
  padding: 5px; 
  border-radius: 5px; 
  
}

.game:hover {
  box-shadow: 2px 2px 4px rgba(15, 13, 13, 0.582); 
}

.gameImage {
  width: 100%; 
  height: auto;
  padding: 5px 0px 0px 0px; 
}

.install {
  border-radius: 5px; 
  position: relative;
  width: 26px;
  height: 20px;
  float: right;
  background: none;
  border: none;
  z-index: 1;
}

.install:hover {
  cursor: pointer;
  background-color:  rgb(98, 149, 163);

}

.install .tooltip {
  position: relative;
  display: inline-block;
  
}

.install .tooltip .tooltiptext {
  opacity: 0;
  visibility: hidden;
  width: relative;
  background-color: ghostwhite;
  color: black;
  font-size: 10px;
  border: .5px;
  border-color: black;
  border-style: solid;
  text-align: center;
  padding: 4px 4px;
  box-shadow: 2px 2px 2px rgba(143, 142, 142, 0.397);; 

  /* Position the tooltip */
  position: absolute;
  bottom: 13px;
  z-index: 2;
  transition: visibility 1s linear .6s, opacity .3s ease-in-out .2s;

}

.install:hover .tooltip .tooltiptext {
  visibility: visible;
  opacity: 1;
  
}

span{
  font-size: 14px; 
  font-family: 'Roboto Mono', monospace;
  color: black; 
}

.gameBody {
  position: relative;
}

.gameBody:hover {
  cursor: pointer;
}

.playButton {
  font-size: 50px; 
  opacity: 0.40; 
  -webkit-text-fill-color: white; 
  position: absolute; 
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;

}

.playButton > span {
  top: 35px;
  display: inline-block;
  position: relative;
}

.playButton:hover {
  opacity: 0.86; 
}

.search {
  background-color: #60DA7D; 
  border-radius: 5px; 
  font-family: 'Roboto Mono', monospace;
  cursor: pointer; 
}

.sortBy {
  border-radius: 3px; 
  background-color: #60DA7D; 
  font-family: 'Roboto Mono', monospace;
  cursor: pointer; 
  
}

.inputBox { 
  margin: 4px 4px 4px 4px; 
}

.sortBy:hover{
  box-shadow: 1px 1px 1px rgba(15, 13, 13, 0.582); 
  cursor: pointer; 
}

.show {display:block;}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f6f6f6;
  min-width: 230px;
  overflow: auto;
  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

#myInput {
  box-sizing: border-box;
  background-position: 14px 12px;
  background-repeat: no-repeat;
  font-size: 16px;
  padding: 14px 20px 12px 45px;
  border: none;
}

.gameUsed {
  transition: box-shadow .6s;
  transition: top .6s; 
  transition: left .6s;  
  display: inline-block; 
  background-color:  #78B9CC;
  margin: 10px; 
  width: 250px; 
  box-shadow: 4px 4px rgba(143, 142, 142, 0.397);
  position: relative;   
  padding: 5px; 
  border-radius: 5px; 
}

.errorMessage {
  background-color: #60DA7D; 
  font-family: 'Roboto Mono', monospace;
  height: 85px;
  width: 40%;   
  position: fixed;
  top: 30%; 
  left: 30%; 
  z-index: 1;  
  display: block; 
  margin: 0 auto;
  box-shadow: 4px 4px rgba(143, 142, 142, 0.397);
  padding: 10px; 
  border-radius: 5px; 
  font-size: 18px; 
}

.okButton {
  border-radius: 5px; 
  background-color: black; 
  font-family: 'Roboto Mono', monospace;
  cursor: pointer; 
  color: white; 
}

.okButton:hover {
  cursor: pointer;
  background-color: darkgrey; 
}

